if applied this commit will add images to the table

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <caption>Who will be the next POTUS?</caption>
     <tbody>
       <tr id="player1_row">
-        <td class="active">C</td>
+        <td class="active">
+          <img class="face" src="images/clinton.png" alt="Hillary Clinton's face">
+        </td>
         <td>C</td>
         <td>C</td>
         <td>C</td>
@@ -25,14 +27,15 @@
       </tr>
         
       <tr id="player2_row">
-        <td class="active">D</td>
+        <td class="active">
+          <img class="face" src="images/trump.png" alt="Donald Trump's face">
+        </td>
         <td>D</td>
         <td>D</td>
         <td>D</td>
         <td>D</td>
       </tr>
   </table>
-
    
   </main>    
 
