if applied this commit will style the table

--- a/index.html
+++ b/index.html
@@ -10,34 +10,37 @@
 </head>
 
 <body>
-  <main>
-  <h1>POTUS Race</h1>
+    <h1>POTUS Race</h1>
 
-  <table class="racer-table">
-    <caption>Who will be the next POTUS?</caption>
-    <tbody>
-      <tr id="player1_row">
-        <td class="active">
-          <img class="face" src="images/clinton.png" alt="Hillary Clinton's face">
-        </td>
-        <td>C</td>
-        <td>C</td>
-        <td>C</td>
-        <td>C</td>
-      </tr>
-        
-      <tr id="player2_row">
-        <td class="active">
-          <img class="face" src="images/trump.png" alt="Donald Trump's face">
-        </td>
-        <td>D</td>
-        <td>D</td>
-        <td>D</td>
-        <td>D</td>
-      </tr>
-  </table>
+    <table class="racer-table">
+      <caption>Who will be the next POTUS?</caption>
+
+        <!-- set row id to distinguish between players -->
+        <tr id="player1_row">
+
+        <!-- set active table cell class  -->
+          <td class="active">
+            <img class="face" src="images/clinton.png" alt="Hillary Clinton's face">
+          </td>
+          <td>C</td>
+          <td>C</td>
+          <td>C</td>
+          <td>C</td>
+        </tr>
+          
+        <!-- set row id to distinguish between players -->
+        <tr id="player2_row">
+
+        <!-- set active table cell class  -->
+          <td class="active">
+            <img class="face" src="images/trump.png" alt="Donald Trump's face">
+          </td>
+          <td>D</td>
+          <td>D</td>
+          <td>D</td>
+          <td>D</td>
+        </tr>
+    </table>
    
-  </main>    
-
 </body>
 </html>
