--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 
         <!-- set active table cell class  -->
           <td class="active">
+            <p class="td_text">HC</p>
             <img class="face" src="images/clinton.png" alt="Hillary Clinton's face">
           </td>
-          <td>C</td>
-          <td>C</td>
-          <td>C</td>
-          <td>C</td>
+          <td>HC</td>
+          <td>HC</td>
+          <td>HC</td>
+          <td>HC</td>
         </tr>
           
         <!-- set row id to distinguish between players -->
@@ -33,12 +34,13 @@
 
         <!-- set active table cell class  -->
           <td class="active">
+            <p class="td_text">DT</p>
             <img class="face" src="images/trump.png" alt="Donald Trump's face">
           </td>
-          <td>D</td>
-          <td>D</td>
-          <td>D</td>
-          <td>D</td>
+          <td>DT</td>
+          <td>DT</td>
+          <td>DT</td>
+          <td>DT</td>
         </tr>
     </table>
    
