if applied this commit will fix minor typos

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
   <title>POTUS Race</title>
   <link rel="stylesheet" href="css/style.css">
 
+  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css">
 
 </head>
 
 <body>
-    <h1>POTUS Race</h1>
+    <h1>Presidential Race for the White House</h1>
 
-    <table class="racer-table">
-      <caption>Who will be the next POTUS?</caption>
+    <h2>Who will be the next POTUS?</h2>
+
+    <table class="racer_table">
 
         <!-- set row id to distinguish between players -->
         <tr id="player1_row">
