--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css">
 
+  <script type="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
+  <script type="js/jQuery.js"></script>
+
 </head>
 
 <body>
