if applied this commit will add pseudocode to js file and typo correx to html and css

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
         <!-- set active table cell class  -->
           <td class="active">
-            <p class="td_text">HC</p>
+            <p class="td_text">C</p>
             <img class="face" src="images/clinton.png" alt="Hillary Clinton's face">
           </td>
-          <td>HC</td>
-          <td>HC</td>
-          <td>HC</td>
-          <td>HC</td>
+          <td>C</td>
+          <td>C</td>
+          <td>C</td>
+          <td>C</td>
         </tr>
           
         <!-- set row id to distinguish between players -->
@@ -40,13 +40,13 @@
 
         <!-- set active table cell class  -->
           <td class="active">
-            <p class="td_text">DT</p>
+            <p class="td_text">T</p>
             <img class="face" src="images/trump.png" alt="Donald Trump's face">
           </td>
-          <td>DT</td>
-          <td>DT</td>
-          <td>DT</td>
-          <td>DT</td>
+          <td>T</td>
+          <td>T</td>
+          <td>T</td>
+          <td>T</td>
         </tr>
     </table>
    
