if applied this commit will update active class in html/css and have start state in js

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css">
 
-  <script type="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-  <script type="js/jQuery.js"></script>
+  <script src="js/jQuery.js"></script>
 
 </head>
 
@@ -25,29 +25,59 @@
         <tr id="player1_row">
 
         <!-- set active table cell class  -->
-          <td class="active">
-            <p class="td_text">C</p>
-            <img class="face" src="images/clinton.png" alt="Hillary Clinton's face">
+          <td>
+            <p>C</p>
+            <img src="images/clinton.png" alt="Hillary Clinton's face">
           </td>
-          <td>C</td>
-          <td>C</td>
-          <td>C</td>
-          <td>C</td>
-        </tr>
+
+          <td>
+            <p>C</p>
+            <img src="images/clinton.png" alt="Hillary Clinton's face">
+          </td>
+
+          <td class="active">
+            <p>C</p>
+            <img src="images/clinton.png" alt="Hillary Clinton's face">
+          </td>
+
+          <td>
+            <p>C</p>
+            <img src="images/clinton.png" alt="Hillary Clinton's face">
+          </td>
+
+          <td>
+            <p>C</p>
+            <img src="images/clinton.png" alt="Hillary Clinton's face">
+          </td>
           
         <!-- set row id to distinguish between players -->
         <tr id="player2_row">
 
         <!-- set active table cell class  -->
-          <td class="active">
-            <p class="td_text">T</p>
-            <img class="face" src="images/trump.png" alt="Donald Trump's face">
+          <td>
+            <p>T</p>
+            <img src="images/trump.png" alt="Donald Trump's face">
           </td>
-          <td>T</td>
-          <td>T</td>
-          <td>T</td>
-          <td>T</td>
-        </tr>
+
+          <td>
+            <p>T</p>
+            <img src="images/trump.png" alt="Donald Trump's face">
+          </td>
+          
+          <td class="active">
+            <p>T</p>
+            <img src="images/trump.png" alt="Donald Trump's face">
+          </td>
+
+          <td>
+            <p>T</p>
+            <img src="images/trump.png" alt="Donald Trump's face">
+          </td>
+
+          <td>
+            <p>T</p>
+            <img src="images/trump.png" alt="Donald Trump's face">
+          </td>
     </table>
    
 </body>
