turn off level 1 key events in level 2

--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
     <h2 class="round1">Level 1</h2>
     <h2 class="round2">Level 2</h2>
 
+        <!-- ________ ROUND 1________  -->
     <table class="round1">
-
-        <!-- set row id to distinguish between players -->
+        <!-- ________ player 1________  -->
         <tr id="p1">
-
-        <!-- set active table cell class  -->
-          <td>
             <p>C</p>
             <img src="images/clinton.png" alt="Hillary Clinton's face">
           </td>
@@ -53,10 +50,8 @@
             <img src="images/clinton.png" alt="Hillary Clinton's face">
           </td>
           
-        <!-- set row id to distinguish between players -->
+        <!-- ________ player 2________  -->
         <tr id="p2">
-
-        <!-- set active table cell class  -->
           <td>
             <p>T</p>
             <img src="images/trump.png" alt="Donald Trump's face">
@@ -83,8 +78,9 @@
           </td>
 
 
-        <!-- set active table cell class  -->
-    <table class="round2">
+        <!-- ________ ROUND 2________  -->
+    <table class="round2">    
+        <!-- ________ player 3________  -->
         <tr class="p3">
           <td class="path">
             <p>C</p>
@@ -189,6 +185,7 @@
             <img src="images/clinton.png" alt="Hillary Clinton's face">
           </td>
 
+        <!-- ________ player 4________  -->
     <table class="round2">
         <tr class="p4">
           <td class="path">
